--- a/popup.html
+++ b/popup.html
@@ -10,7 +10,7 @@
 
         <script type="text/javascript" src="popup.js"></script>
     </head>
-    <body style="width:400; height:150; padding: 5px">
+    <body>
         <wrapper class="d-flex flex-column">
             <nav class="navbar navbar-light bg-faded">
                 <a class="navbar-brand">
@@ -19,12 +19,31 @@
                 </a>
             </nav>
             <main>
-                <hr>
-                <button id="setupCurrentPageButton" class="btn btn-lg btn-link">Set up team on current page</button>
-                <hr>
+                <div class="card">
+                    <div class="card-header">
+                        Actions
+                    </div>
+                    <div class="card-body">
+                        <button id="setupCurrentPageButton" class="btn btn-lg btn-link">Set up team on current page</button>
+                    </div>
+                </div>
+                <br>
+                <div class="card">
+                    <div class="card-header">
+                        Settings
+                    </div>
+                    <div class="card-body">
+                        <form class="card-text">
+                            <div class="form-check" title="When this is enabled, automatic team changes are immediately submitted.">
+                                <input class="form-check-input" type="checkbox" value="" id="autoSaveCheckbox">
+                                <label class="form-check-label" for="autoSaveCheckbox">Save automatically</label>
+                            </div>
+                        </form>
+                    </div>
+                </div>
             </main>
             <footer class="text-right">
-                <button id="viewOnGitHubButton" class="btn btn-lg btn-link"><img src="GitHub-Mark-32px.png" alt="GitHub"></button>
+                <button id="viewOnGitHubButton" class="btn btn-lg btn-link" title="View on GitHub"><img src="GitHub-Mark-32px.png" alt="GitHub"></button>
             </footer>
         </wrapper>
         <script src="jquery-3.2.1.slim.min.js"></script>
