--- a/popup.html
+++ b/popup.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html>
     <head>
         <meta charset="utf-8">
@@ -8,7 +9,8 @@
         <link href="bootstrap.min.css" rel="stylesheet">
         <link href="popup.css" rel="stylesheet">
 
-        <script type="text/javascript" src="popup.js"></script>
+        <script src="popup.js"></script>
+        <script src="settings.js"></script>
     </head>
     <body>
         <wrapper class="d-flex flex-column">
@@ -33,12 +35,15 @@
                         Settings
                     </div>
                     <div class="card-body">
-                        <form class="card-text">
+                        <form>
                             <div class="form-check" title="When this is enabled, automatic team changes are immediately submitted.">
                                 <input class="form-check-input" type="checkbox" value="" id="autoSaveCheckbox">
                                 <label class="form-check-label" for="autoSaveCheckbox">Save automatically</label>
                             </div>
                         </form>
+                        <p class="card-text text-right">
+                            <a href="#" id="showSettingsPageLink" class="card-link">Settings page</a>
+                        </p>
                     </div>
                 </div>
             </main>
