Filled in About tab on settings page.

--- a/popup.html
+++ b/popup.html
@@ -17,7 +17,7 @@
             <nav class="navbar navbar-light bg-faded">
                 <a class="navbar-brand">
                     <img src="icon-32.png" width="32" height="32" class="d-inline-block align-top" alt="">
-                    ESPN NBA Fantasy Auto-Setup <span id="versionSpan"></span>
+                    ESPN NBA Fantasy Auto-Setup <span class="versionNumber"></span>
                 </a>
             </nav>
             <main>
