--- a/settings.html
+++ b/settings.html
@@ -38,10 +38,30 @@
                     <button id="saveButton" class="btn btn-primary" disabled>Save</button>
                 </div>
                 <div class="tab-pane container fade" id="tabs-about" role="tabpanel" aria-labelledby="tabs-about-tab">
-                    ...
+                    <h2>About</h2>
+                    <hr>
+                    <p>
+                        Developed by Magnus Grindal Bakken.<br>
+                        You're currently using version <span class="versionNumber"></span> of the extension.<br>
+                        View the extension on the <a href="https://chrome.google.com/webstore/detail/espn-nba-fantasy-team-aut/nmehekgchlioodlggejkfhiglajaonie" target="_blank">Chrome Web Store</a>.
+                    </p>
+                    <hr>
+                    <h3>Technical stuff</h3>
+                    <p>
+                        Visit the extension project on <a href="https://github.com/magnusbakken/espn-fantasy-autopick" target="_blank">GitHub</a> (<a href="https://github.com/magnusbakken/espn-fantasy-autopick/issues" target="_blank">report a bug/suggestion</a>).<br>
+                        The extension code is available under the <a href="https://opensource.org/licenses/MIT" target="_blank">MIT license</a>.
+                    </p>
+                    <h5>Libraries used</h5>
+                    <ul>
+                        <li><a href="https://getbootstrap.com/" target="_blank">Bootstrap</a></li>
+                        <li><a href="https://jquery.com/" target="_blank">jQuery</a></li>
+                        <li><a href="https://popper.js.org/" target="_blank">popper.js</a></li>
+                        <li><a href="https://www.emojione.com" target="_blank">EmojiOne (extension icon)</a></li>
+                    </ul>
+                    <hr>
+                    <small>Copyright &copy; 2018 - Magnus Grindal Bakken</small>
                 </div>
             </div>
-
         </div>
 
         <script src="jquery-3.2.1.slim.min.js"></script>
