Added United bootstrap theme.

--- a/popup.html
+++ b/popup.html
@@ -17,12 +17,12 @@
             <nav class="navbar navbar-light bg-faded">
                 <a class="navbar-brand">
                     <img src="icon-32.png" width="32" height="32" class="d-inline-block align-top" alt="">
-                    ESPN NBA Fantasy Auto-Setup <span class="versionNumber"></span>
+                    ESPN NBA Fantasy Auto-Setup <span class="popup-version-number"></span>
                 </a>
             </nav>
             <main>
-                <div class="card">
-                    <div class="card-header">
+                <div class="card border-primary">
+                    <div class="card-header bg-primary text-white">
                         Actions
                     </div>
                     <div class="card-body">
@@ -30,8 +30,8 @@
                     </div>
                 </div>
                 <br>
-                <div class="card">
-                    <div class="card-header">
+                <div class="card border-primary">
+                    <div class="card-header bg-primary text-white">
                         Settings
                     </div>
                     <div class="card-body">
