--- a/settings.html
+++ b/settings.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
+        <base target="_blank">
 
         <title>ESPN NBA Fantasy Auto-Setup Settings</title>
 
@@ -42,21 +43,26 @@
                     <hr>
                     <p>
                         Developed by Magnus Grindal Bakken.<br>
-                        You're currently using version <span class="versionNumber"></span> of the extension.<br>
-                        View the extension on the <a href="https://chrome.google.com/webstore/detail/espn-nba-fantasy-team-aut/nmehekgchlioodlggejkfhiglajaonie" target="_blank">Chrome Web Store</a>.
+                        You're currently using version <span class="settings-version-number"></span> of the extension.<br>
+                        View the extension on the <a href="https://chrome.google.com/webstore/detail/espn-nba-fantasy-team-aut/nmehekgchlioodlggejkfhiglajaonie">Chrome Web Store</a>.
                     </p>
                     <hr>
                     <h3>Technical stuff</h3>
                     <p>
-                        Visit the extension project on <a href="https://github.com/magnusbakken/espn-fantasy-autopick" target="_blank">GitHub</a> (<a href="https://github.com/magnusbakken/espn-fantasy-autopick/issues" target="_blank">report a bug/suggestion</a>).<br>
-                        The extension code is available under the <a href="https://opensource.org/licenses/MIT" target="_blank">MIT license</a>.
+                        Visit the extension project on <a href="https://github.com/magnusbakken/espn-fantasy-autopick">GitHub</a> (<a href="https://github.com/magnusbakken/espn-fantasy-autopick/issues">report a bug/suggestion</a>).<br>
+                        The extension code is available under the <a href="https://opensource.org/licenses/MIT">MIT license</a>.
                     </p>
                     <h5>Libraries used</h5>
                     <ul>
-                        <li><a href="https://getbootstrap.com/" target="_blank">Bootstrap</a></li>
-                        <li><a href="https://jquery.com/" target="_blank">jQuery</a></li>
-                        <li><a href="https://popper.js.org/" target="_blank">popper.js</a></li>
-                        <li><a href="https://www.emojione.com" target="_blank">EmojiOne (extension icon)</a></li>
+                        <li>
+                            <a href="https://getbootstrap.com/">Bootstrap</a>
+                            <ul>
+                                <li><a href="https://bootswatch.com/united/">United Theme</a> by <a href="https://thomaspark.co/">Thomas Park</a></li>
+                            </ul>
+                        </li>
+                        <li><a href="https://jquery.com/">jQuery</a></li>
+                        <li><a href="https://popper.js.org/">popper.js</a></li>
+                        <li><a href="https://www.emojione.com">EmojiOne (extension icon)</a></li>
                     </ul>
                     <hr>
                     <small>Copyright &copy; 2018 - Magnus Grindal Bakken</small>
