Fixed settings page.

--- a/popup.html
+++ b/popup.html
@@ -9,8 +9,8 @@
         <link href="bootstrap.min.css" rel="stylesheet">
         <link href="popup.css" rel="stylesheet">
 
+        <script src="settings-api.js"></script>
         <script src="popup.js"></script>
-        <script src="settings.js"></script>
     </head>
     <body>
         <wrapper class="d-flex flex-column">
