--- a/settings.html
+++ b/settings.html
@@ -8,6 +8,8 @@
         <title>ESPN NBA Fantasy Auto-Setup Settings</title>
 
         <link href="bootstrap.min.css" rel="stylesheet">
+        <link href="settings.css" rel="stylesheet">
+        <script src="settings-api.js"></script>
         <script src="settings.js"></script>
     </head>
     <body>
