Moved images into assets folder and libraries into lib folder.

--- a/popup.html
+++ b/popup.html
@@ -6,9 +6,8 @@
 
         <title>ESPN NBA Fantasy Auto-Setup</title>
 
-        <link href="bootstrap.min.css" rel="stylesheet">
+        <link href="lib/bootstrap.min.css" rel="stylesheet">
         <link href="popup.css" rel="stylesheet">
-
         <script src="settings-api.js"></script>
         <script src="popup.js"></script>
     </head>
@@ -16,7 +15,7 @@
         <wrapper class="d-flex flex-column">
             <nav class="navbar navbar-light bg-faded">
                 <a class="navbar-brand">
-                    <img src="icon-32.png" width="32" height="32" class="d-inline-block align-top" alt="">
+                    <img src="assets/icon-32.png" width="32" height="32" class="d-inline-block align-top" alt="">
                     ESPN NBA Fantasy Auto-Setup <span class="popup-version-number"></span>
                 </a>
             </nav>
@@ -48,11 +47,11 @@
                 </div>
             </main>
             <footer class="text-right">
-                <button id="viewOnGitHubButton" class="btn btn-lg btn-link" title="View on GitHub"><img src="GitHub-Mark-32px.png" alt="GitHub"></button>
+                <button id="viewOnGitHubButton" class="btn btn-lg btn-link" title="View on GitHub"><img src="assets/GitHub-Mark-32px.png" alt="GitHub"></button>
             </footer>
         </wrapper>
-        <script src="jquery-3.2.1.slim.min.js"></script>
-        <script src="popper.min.js"></script>
-        <script src="bootstrap.min.js"></script>
+        <script src="lib/jquery-3.2.1.slim.min.js"></script>
+        <script src="lib/popper.min.js"></script>
+        <script src="lib/bootstrap.min.js"></script>
     </body>
 </html>
