--- a/settings.html
+++ b/settings.html
@@ -7,7 +7,7 @@
 
         <title>ESPN NBA Fantasy Auto-Setup Settings</title>
 
-        <link href="bootstrap.min.css" rel="stylesheet">
+        <link href="lib/bootstrap.min.css" rel="stylesheet">
         <link href="settings.css" rel="stylesheet">
         <script src="settings-api.js"></script>
         <script src="settings.js"></script>
@@ -15,7 +15,7 @@
     <body>
         <div class="container">
             <div class="masthead">
-                <h3 class="muted"><img src="icon-64.png" alt="Logo"> ESPN NBA Fantasy Auto-Setup</h3>
+                <h3 class="muted"><img src="assets/icon-64.png" alt="Logo"> ESPN NBA Fantasy Auto-Setup</h3>
                 <div class="navbar">
                     <ul class="nav nav-pills mb-3" id="tabs-pill" role="tablist">
                         <li class="nav-item">
@@ -72,8 +72,8 @@
             </div>
         </div>
 
-        <script src="jquery-3.2.1.slim.min.js"></script>
-        <script src="popper.min.js"></script>
-        <script src="bootstrap.min.js"></script>
+        <script src="lib/jquery-3.2.1.slim.min.js"></script>
+        <script src="lib/popper.min.js"></script>
+        <script src="lib/bootstrap.min.js"></script>
     </body>
 </html>
