Added basic multi-day setup.

--- a/popup.html
+++ b/popup.html
@@ -26,6 +26,7 @@
                     </div>
                     <div class="card-body">
                         <button id="setupCurrentPageButton" class="btn btn-lg btn-link">Set up team on current page</button>
+                        <button id="setupCurrentWeekButton" class="btn btn-lg btn-link">Set up for the rest of the week</button>
                     </div>
                 </div>
                 <br>
