Added auo-setup for a custom number of days.
Also fixed some issues related to savnig and restoring settings.

--- a/popup.html
+++ b/popup.html
@@ -28,6 +28,10 @@
                         <button id="setupCurrentPageButton" class="btn btn-sm btn-link">⌚ Set up for current day</button>
                         <br>
                         <button id="setupCurrentWeekButton" class="btn btn-sm btn-link">📅 Set up for current week</button>
+                        <br>
+                        <button id="setupCustomDaysButton" class="btn btn-sm btn-link">
+                            📆 Set up for <input type="number" value="10" min="1" max="200" id="customDaysInput" style="width: 50px"> days
+                        </button>
                     </div>
                 </div>
                 <br>
