--- a/settings.html
+++ b/settings.html
@@ -46,6 +46,11 @@
                             <input class="form-field-input setting" type="number" value="" class="setting" id="loadMaxAttemptsInput">
                             <small class="form-text text-muted">When doing multi-day setups, this is the maximum number of times to wait for the roster to load before giving up.</small>
                         </div>
+                        <div class="form-group">
+                            <label for="customDaysInput">Default value for custom days</label><br>
+                            <input class="form-field-input setting" type="number" value="" class="setting" id="customDaysInput">
+                            <small class="form-text text-muted">When doing multi-day setups with custom day counts, this is the default number of days.</small>
+                        </div>
                     </form>
                     <br>
                     <button id="saveButton" class="btn btn-primary" disabled>Save</button>
