--- a/src/nba/settings.html
+++ b/src/nba/settings.html
@@ -108,7 +108,7 @@
                     <li><a href="https://www.emojione.com">EmojiOne (extension icon)</a></li>
                 </ul>
                 <hr>
-                <small>Copyright &copy; 2018 - Magnus Grindal Bakken</small>
+                <small>Copyright &copy; 2018-2021 - Magnus Grindal Bakken</small>
             </div>
         </div>
     </div>
