--- a/src/nhl/settings.html
+++ b/src/nhl/settings.html
@@ -99,16 +99,17 @@
                     <li>
                         <a href="https://getbootstrap.com/">Bootstrap</a>
                         <ul>
-                            <li><a href="https://bootswatch.com/united/">United Theme</a> by <a
+                            <li><a href="https://bootswatch.com/cosmo/">Cosmo Theme</a> by <a
                                     href="https://thomaspark.co/">Thomas Park</a></li>
                         </ul>
                     </li>
                     <li><a href="https://jquery.com/">jQuery</a></li>
                     <li><a href="https://popper.js.org/">popper.js</a></li>
-                    <li><a href="https://www.emojione.com">EmojiOne (extension icon)</a></li>
+                    <li><a href="https://iconduck.com/sets/emoji-two-emoji-set">Emoji Two Emoji (extension icon)</a>
+                    </li>
                 </ul>
                 <hr>
-                <small>Copyright &copy; 2018 - Magnus Grindal Bakken</small>
+                <small>Copyright &copy; 2018-2021 - Magnus Grindal Bakken</small>
             </div>
         </div>
     </div>
